name:                data-ringbuffer
version:             0.2
synopsis:            Ringbuffer implementation using Vectors, inspired by the "Disruptor Pattern"
homepage:            https://github.com/kim/data-ringbuffer
license:             OtherLicense
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Data, Concurrency
build-type:          Simple
stability:           Experimental
cabal-version:       >=1.10

extra-source-files:  Readme.md

source-repository head
  type:     git
  location: git://github.com/kim/data-ringbuffer.git

library
  exposed-modules:   Data.RingBuffer
                   , Data.RingBuffer.Class
                   , Data.RingBuffer.Vector
  other-modules:     Data.RingBuffer.Internal
                   , Data.RingBuffer.Types
  build-depends:     base >= 4 && < 5
                   , transformers
                   , vector
                   , IORefCAS
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -fno-warn-unused-do-bind -funbox-strict-fields
  ghc-prof-options:  -fprof-auto
  hs-source-dirs:    src


benchmark perf-disruptor2-unicast
  type:              exitcode-stdio-1.0
  main-is:           Unicast.hs
  build-depends:     base >= 4 && < 5
                   , data-ringbuffer
                   , deepseq
                   , time
                   , vector
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:    perf/disruptor2
                   , perf

benchmark perf-disruptor2-unicast-batch
  type:              exitcode-stdio-1.0
  main-is:           UnicastBatch.hs
  build-depends:     base >= 4 && < 5
                   , data-ringbuffer
                   , deepseq
                   , containers
                   , time
                   , vector
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:    perf/disruptor2
                   , perf

benchmark perf-disruptor2-multicast
  type:              exitcode-stdio-1.0
  main-is:           Multicast.hs
  build-depends:     base >= 4 && < 5
                   , data-ringbuffer
                   , deepseq
                   , time
                   , vector
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:    perf/disruptor2
                   , perf

benchmark perf-tchan-unicast
  type:              exitcode-stdio-1.0
  main-is:           Unicast.hs
  build-depends:     base >= 4 && < 5
                   , time
                   , stm
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:    perf/tchan
                   , perf

benchmark perf-tchan-multicast
  type:              exitcode-stdio-1.0
  main-is:           Multicast.hs
  build-depends:     base >= 4 && < 5
                   , time
                   , stm
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:    perf/tchan
                   , perf

benchmark perf-false-sharing
  type:              exitcode-stdio-1.0
  main-is:           FalseSharing.hs
  build-depends:     base >= 4 && < 5
                   , time
                   , IORefCAS
                   , criterion
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:    perf
