name:                data-ringbuffer
version:             0.3
synopsis:            Ringbuffer implementation using Vectors, inspired by the "Disruptor Pattern"
homepage:            https://github.com/kim/data-ringbuffer
license:             OtherLicense
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Data, Concurrency
build-type:          Simple
stability:           Experimental
cabal-version:       >=1.10

extra-source-files:  Readme.md

source-repository head
  type:     git
  location: git://github.com/kim/data-ringbuffer.git

library
  exposed-modules:   Data.RingBuffer
                   , Data.RingBuffer.Class
                   , Data.RingBuffer.Vector
  other-modules:     Data.RingBuffer.Internal
                   , Data.RingBuffer.Types
  build-depends:     base >= 4 && < 5
                   , transformers
                   , vector
                   , atomic-primops
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -fno-warn-unused-do-bind -funbox-strict-fields
  ghc-prof-options:  -fprof-auto
  hs-source-dirs:    src


benchmark perf-data-ringbuffer
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , atomic-primops
                   , criterion
                   , data-ringbuffer
                   , deepseq
                   , stm
                   , time
                   , vector
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:    perf, perf/disruptor2, perf/tchan
