name:                data-ringbuffer
version:             0.3
synopsis:            Ringbuffer implementation using Vectors, inspired by the "Disruptor Pattern"
homepage:            https://github.com/kim/data-ringbuffer
license:             OtherLicense
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Data, Concurrency
build-type:          Simple
stability:           Experimental
cabal-version:       >=1.10

extra-source-files:  Readme.md

source-repository head
  type:     git
  location: git://github.com/kim/data-ringbuffer.git

library
  exposed-modules:   Data.RingBuffer
                   , Data.RingBuffer.RingBuffer
                   , Data.RingBuffer.Sequence
                   , Data.RingBuffer.Sequencer
                   , Data.RingBuffer.SequenceBarrier
  build-depends:     base >= 4 && < 5
                   , atomic-primops
                   , exceptions
                   , primitive
                   , stm
                   , transformers
                   , vector
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -O2
                     -funbox-strict-fields
  ghc-prof-options:  -fprof-auto
  hs-source-dirs:    src


benchmark perf-data-ringbuffer
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , atomic-primops
                   , criterion
                   , data-ringbuffer
                   , deepseq
                   , stm
                   , time
                   , vector
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -O2
                     -threaded
                     -rtsopts
                     "-with-rtsopts=-N -I0"
                     -funbox-strict-fields
  ghc-prof-options:  -fprof-auto
  hs-source-dirs:    perf, perf/Disruptor3, perf/TChan
