Name:                vector-ringbuffer
Version:             0.1
Synopsis:            Ringbuffer implementation using Vectors, inspired by the "Disruptor Pattern"
Homepage:            https://github.com/kim/vector-ringbuffer
License:             OtherLicense
License-file:        LICENSE
Author:              Kim Altintop
Maintainer:          kim.altintop@gmail.com
Category:            Concurrency
Build-type:          Simple
Stability:           Experimental
Cabal-version:       >=1.2


Library
  Exposed-modules: Data.Vector.RingBuffer
  Build-depends:   base >= 3, vector, transformers
  Other-modules:
  ghc-options:     -Wall -O2
  hs-source-dirs:  src
